@@ -1,4 +1,4 @@
-static const char CVSID[] = "$Id: utils.c,v 1.24 2006/02/05 16:31:25 yooden Exp $";
+static const char CVSID[] = "$Id: utils.c,v 1.25 2006/02/11 10:37:28 yooden Exp $";
 /*******************************************************************************
 *                                                                              *
 * utils.c -- miscellaneous non-GUI routines                                    *
@@ -410,3 +410,86 @@ static Boolean isRegFile(const char* file)
 
     return ((stat(file, &attribute) == 0) && S_ISREG(attribute.st_mode));
 }
+
+/*
+**  Part of the simple stack. Accepts a stack and the pointer you want to
+**  store. NULL is not allowed, as it is used in Pop() to signal an empty
+**  stack.
+*/
+void Push(Stack* stack, const void* value)
+{
+    stackObject* pushee;
+
+    /*  Throw away invalid parameters.  */
+    if (NULL == value) {
+        fprintf(stderr, "nedit: Internal error: NULL was pushed.\n");
+        return;
+    }
+    if (NULL == stack) {
+        fprintf(stderr, "nedit: Internal error: push() called with NULL stack.\n");
+        return;
+    }
+
+    /*  Allocate memory for new value.  */
+    pushee = (stackObject*) XtMalloc(sizeof(stackObject));
+
+    /*  Put pushee on top of stack.  */
+    pushee->value = (void*) value;
+    pushee->next = stack->top;
+    stack->top = pushee;
+    (stack->size)++;
+
+    return;
+}
+
+/*
+**  Part of the simple stack, returns the topmost item from the stack or
+**  NULL if the stack is empty. It also returns NULL if the stack itself
+**  is NULL.
+**
+**  Precondition: The stack's top element is either NULL or a properly
+**  initialised stackObject.
+*/
+void* Pop(Stack* stack)
+{
+    stackObject* popee;
+    void* value;
+
+    /*  Throw away invalid parameter.  */
+    if (NULL == stack) {
+        fprintf(stderr, "nedit: Internal error: pop() called with NULL stack.\n");
+        return NULL;
+    }
+
+    /*  Return NULL if Stack is empty.  */
+    if (NULL == stack->top) {
+        return NULL;
+    }
+
+    /*  Remove top entry in the stack.  */
+    popee = stack->top;
+    stack->top = popee->next;
+    (stack->size)--;
+
+    value = popee->value;
+    XtFree((char*) popee);
+
+    return value;
+}
+
+/*
+**  We currently don't need this function: In the only situation where we use
+**  the stack, we empty it completely. This might come in handy if the stack
+**  is ever used anywhere else.
+**
+**  Beware: Utterly untested.
+*/  /*
+void FreeStack(Stack* stack)
+{
+    void* dummy;
+
+    while (NULL != (dummy = pop(progStack))) {}
+
+    XtFree((char*) stack);
+}
+*/
