@@ -1,4 +1,4 @@
-/* $Id: utils.h,v 1.14 2006/02/05 16:31:25 yooden Exp $ */
+/* $Id: utils.h,v 1.15 2006/02/11 10:37:28 yooden Exp $ */
 /*******************************************************************************
 *                                                                              *
 * utils.h -- Nirvana Editor Utilities Header File                              *
@@ -46,6 +46,33 @@ int Min(int i1, int i2);
 int Min3(int i1, int i2, int i3);
 int Max3(int i1, int i2, int i3);
 const char* GetRCFileName(int type);
+
+/*
+**  Simple stack implementation which only keeps void pointers.
+**  The stack must already be allocated and initialised:
+**
+**  Stack* stack = (Stack*) XtMalloc(sizeof(Stack));
+**  stack->top = NULL;
+**  stack->size = 0;
+**
+**  NULL is not allowed to pass in, as it is used to signal an empty stack.
+**
+**  The user should only ever care about Stack, stackObject is an internal
+**  object. (So it should really go in utils.c. A forward reference was
+**  refused by my compiler for some reason though.)
+*/
+typedef struct _stackObject {
+    void* value;
+    struct _stackObject* next;
+} stackObject;
+
+typedef struct {
+    unsigned size;
+    stackObject* top;
+} Stack;
+
+void Push(Stack* stack, const void* value);
+void* Pop(Stack* stack);
 
 /* N_FILE_TYPES must be the last entry!! This saves us from counting. */
 enum {NEDIT_RC, AUTOLOAD_NM, NEDIT_HISTORY, N_FILE_TYPES};
