@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.34 2006/01/02 22:35:04 yooden Exp $
+$Id: ReleaseNotes,v 1.35 2006/02/11 10:37:28 yooden Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -33,6 +33,10 @@ Bugs fixed in $NEXT_VERSION
     shell, not /bin/csh. This fixes SF#403738 and SF#880607.
 
   - File history is now consistent across multiple sessions (SF bug #557032).
+
+  - If a macro file contains function definitions mixed with code segments
+    the code segments were excuted in the wrong order in certain cases. This
+    is fixed (SF bug #622291).
 
 
 New features in 5.5 
